# build_with_llms

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
hr_app/: README.md  main.py
hr_app/scratch/: dev0_local_model.ipynb
recruit_assist/: deploy.py  main.py
src/: constants.py  deploy.py  main.py
src/scratch/: dev0_local_model.ipynb
tests/: test_smoke.py
workshop-1/: README.md  dev.ipynb  pdf_qa_logs.db
workshop-1/scratch/: dev1.ipynb
